feat: add cryptomus domain confirmation meta

--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -34,3 +34,7 @@
 
 <!-- custom js link -->
 <script src="/js/script.js" defer></script>
+
+
+<!-- CRYPTOMUS_VERIFY -->
+<meta name="cryptomus" content="a83ccc0b" />
